# r3d

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  TODO  mingw-w32-x86_64.cmake  mingw-w64-x86_64.cmake
.github/workflows/: build.yml  cmake-multi-platform.yml
embedded/shaders/: EmbedShaders.cmake
embedded/shaders/common/: cubemap.vs.glsl  screen.vs.glsl
embedded/shaders/generate/: cubemapFromEquirectangular.fs.glsl  gaussianBlurDualPass.fs.glsl  irradianceConvolution.fs.glsl  prefilter.fs.glsl
embedded/shaders/raster/: depth.fs.glsl  depth.inst.vs.glsl  depth.vs.glsl  depthCube.fs.glsl  depthCube.inst.vs.glsl  depthCube.vs.glsl  forward.fs.glsl  forward.inst.vs.glsl  forward.vs.glsl  geometry.fs.glsl  geometry.inst.vs.glsl  geometry.vs.glsl  skybox.fs.glsl  skybox.vs.glsl
embedded/shaders/screen/: adjustment.fs.glsl  ambient.fs.glsl  bloom.fs.glsl  color.fs.glsl  fog.fs.glsl  fxaa.fs.glsl  ibl.fs.glsl  lighting.fs.glsl  outline.fs.glsl  post.fs.glsl  scene.fs.glsl  ssao.fs.glsl  tonemap.fs.glsl
embedded/textures/: EmbedTextures.cmake  iblBrdfLut.dds
examples/: CMakeLists.txt  basic.c  bloom.c  common.h  directional.c  fog.c  forward.c  instanced.c  kinematics.c  lights.c  pbr.c  resize.c  skybox.c  sponza.c  sprite.c  transparency.c
include/: r3d.h
include/r3d/: r3d.h  r3d_core.h  r3d_environment.h  r3d_frustum.h  r3d_importer.h  r3d_kinematics.h  r3d_model.h  r3d_shape.h
scripts/: bin2c.py  glsl_minifier.py  shader_minifier.py
shaders/deferred/: ambient.frag  lighting.frag
shaders/include/blocks/: light.glsl
shaders/prepare/: atrous_wavelet.frag  denoiser_atrous.frag  denoiser_sparse.frag  ssao.frag  ssgi.frag  ssil.frag
shaders/scene/: forward.frag
src/: r3d_config.h.in  r3d_core.c  r3d_core_state.h  r3d_culling.c  r3d_curves.c  r3d_debug.c  r3d_draw.c  r3d_environment.c  r3d_frustum.c  r3d_kinematics.c  r3d_lighting.c  r3d_model.c  r3d_particles.c  r3d_screen_shader.c  r3d_shape.c  r3d_sky_shader.c  r3d_skybox.c  r3d_sprite.c  r3d_state.c  r3d_state.h  r3d_surface_shader.c  r3d_utils.c  r3d_vertex.c
src/common/: r3d_math.h  r3d_rshade.h
src/details/: r3d_billboard.c  r3d_collision.c  r3d_collision.h  r3d_dds_loader_ext.h  r3d_drawcall.c  r3d_drawcall.h  r3d_frustum.c  r3d_light.c  r3d_light.h  r3d_projection.c  r3d_projection.h
src/details/misc/: r3d_half.h
src/embedded/: r3d_shaders.c.in  r3d_shaders.h  r3d_textures.c.in  r3d_textures.h
src/importer/: r3d_importer_mesh.c
src/modules/: r3d_env.c  r3d_env.h  r3d_light.c  r3d_light.h  r3d_render.c  r3d_render.h  r3d_shader.c  r3d_shader.h  r3d_target.c  r3d_target.h
